<resources>

    <!-- Core -->
    <string name="app_name" translatable="false">My Application</string>

    <!-- Auth -->
    <string name="let_s_get_acquainted">Let`s get acquainted</string>
    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me"> Remember me</string>
    <string name="register">REGISTER</string>
    <string name="settings">settings</string>
    <string name="by_clicking_register_you_agree_to_our_terms_and_conditions">By clicking Register you agree to our Terms and Conditions</string>

    <style name="invalidEmail">Invalid email</style>

    <!-- Profile -->
    <string name="adress">Home address</string>
    <string name="career">Career</string>
    <string name="facebookbutton">facebookButton</string>
    <string name="inbutton">inButton</string>
    <string name="instagrambutton">instagramButton</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="email_input" translatable="false">Email</string>
    <string name="password_input">Password</string>
    <string name="passwordLenghtErrorText">password must be at least %d characters long</string>
    <string name="log_out">Log Out</string>
    <string name="name_name">name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="or">or</string>
    <string name="google">Google</string>

    <string name="contacts">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="contact_has_been_removed">Contact has been removed</string>
    <string name="add_contact">Add contact</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="address">Adress</string>
    <string name="remove_contact">Contact has been removed</string>
    <string name="save">Save</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="firstname_lastname">FirstName LastName</string>
    <string name="careerHint">Career</string>
    <string name="name_gmail_com" translatable="false">name@gmail.com</string>
    <string name="number_example" translatable="false">(068)-644-21-04</string>
    <string name="address_example" translatable="false">775 Westminster Avenue APT D5 Brooklyn, NY, 11230</string>
    <string name="date_birth_example" translatable="false">11/02/2003</string>
    <string name="invalid_username_there_must_be_a_first_and_last_name">invalid username, there must be a first and last name</string>
    <string name="cannot_be_blank">cannot be blank</string>
    <string name="must_be_10_numbers">must be 10 numbers</string>
    <string name="incorrect_date">incorrect date</string>
    <string name="fill_in_all_fields_correctly">fill in all fields correctly</string>
    <string name="message">MESSAGE</string>
    <string name="profile">Profile</string>
    <string name="contact_name">contact_name</string>
    <string name="your_profile_data">Your profile data</string>
    <string name="fill_out_the_profile">Fill out the profile and go to the application!</string>
    <string name="user_name">User name</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="cancel">Cancel</string>
    <string name="forward">FORWARD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">HELLO!</string>
    <string name="login_instruction">Enter your email and password below</string>
    <string name="remember_me1">Remember me</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_account">Don`t have account?</string>
    <string name="users">Users</string>
    <string name="email_is_already_registered">email is already registered</string>
    <string name="search">Search</string>
    <string name="search_notification_title">Search contacts</string>
    <string name="search_notification_message">Push the search button to go to search view</string>
    <string name="network_error">network error</string>


</resources>