<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/ViewAddContactTop"
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:background="@color/themeColor"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backButton"
        android:layout_width="@dimen/buttonBackSize"
        android:layout_height="@dimen/buttonBackSize"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/buttonBactaddContactTopMargin"
        android:background="@color/trasnparentColor"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textviewAddContact"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="@dimen/textViewAddContactTopMargin"
        android:fontFamily="@font/opens_sans"
        android:text="@string/add_contact"
        android:textColor="@color/white"
        android:textSize="@dimen/biggerTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ImageViewAddContactPhoto"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:layout_marginTop="@dimen/contactPhotoTopMargin"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textviewAddContact" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/buttonAddPhoto"
        android:layout_width="@dimen/buttonAddPhotoSize"
        android:layout_height="@dimen/buttonAddPhotoSize"
        android:layout_marginStart="@dimen/throughItemBIgMargin"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintBottom_toBottomOf="@id/ImageViewAddContactPhoto"
        app:layout_constraintStart_toEndOf="@id/ImageViewAddContactPhoto"
        app:layout_constraintTop_toTopOf="@id/ImageViewAddContactPhoto" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/scrollViewBottomMargin"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/buttonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ViewAddContactTop">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_username"
                style="@style/edit_text_auth_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontalMargin"
                android:layout_marginTop="@dimen/throughItemBIgMargin"
                android:layout_marginEnd="@dimen/horizontalMargin"
                android:hint="@string/username"
                app:errorEnabled="true"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/firstname_lastname"
                    android:textColorHint="@color/grey_text_2"
                    android:lines="1"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_career"
                style="@style/edit_text_auth_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontalMargin"
                android:layout_marginTop="@dimen/throughItemBIgMargin"
                android:layout_marginEnd="@dimen/horizontalMargin"
                android:hint="@string/career"
                app:errorEnabled="true"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_career"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/careerHint"
                    android:textColorHint="@color/grey_text_2"
                    android:lines="1"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email"
                style="@style/edit_text_auth_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontalMargin"
                android:layout_marginTop="@dimen/throughItemBIgMargin"
                android:layout_marginEnd="@dimen/horizontalMargin"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:hint="@string/name_gmail_com"
                    android:textColorHint="@color/grey_text_2"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_phone"
                style="@style/edit_text_auth_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontalMargin"
                android:layout_marginTop="@dimen/throughItemBIgMargin"
                android:layout_marginEnd="@dimen/horizontalMargin"
                android:hint="@string/phone"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:hint="@string/number_example"
                    android:textColorHint="@color/grey_text_2"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_adress"
                style="@style/edit_text_auth_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontalMargin"
                android:layout_marginTop="@dimen/throughItemBIgMargin"
                android:layout_marginEnd="@dimen/horizontalMargin"
                android:hint="@string/address"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/address_example"
                    android:textColorHint="@color/grey_text_2"
                    android:lines="1"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_date_of_birth"
                style="@style/edit_text_auth_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontalMargin"
                android:layout_marginTop="@dimen/throughItemBIgMargin"
                android:layout_marginEnd="@dimen/horizontalMargin"
                android:hint="@string/date_of_birth"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:hint="@string/date_birth_example"
                    android:textColorHint="@color/grey_text_2"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginEnd="@dimen/horizontalMargin"
        android:layout_marginBottom="@dimen/throughItemMediumMargin"
        android:background="@drawable/button_save_background"
        android:paddingTop="@dimen/standardPadding"
        android:paddingBottom="@dimen/standardPadding"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/bigTextSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>