<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:fontFamily="@font/opens_sans"
        android:textStyle="bold"
        android:textSize="@dimen/superBigTextSize"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_instruction"
        android:textColor="@color/white"
        android:fontFamily="@font/opens_sans"

        android:textSize="@dimen/smallTextSize"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintTop_toBottomOf="@id/textViewHello"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        style="@style/edit_text_auth_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/SuperBigTextSize"
        android:layout_marginEnd="@dimen/horizontalMargin"
        android:hint="@string/email_input"
        app:errorEnabled="true"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewInstruction">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/white"
          />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password"
        style="@style/edit_text_auth_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/SuperBigTextSize"
        android:layout_marginEnd="@dimen/horizontalMargin"
        android:hint="@string/password_input"
        app:errorEnabled="true"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:textColor="@color/white"
           />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBoxRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/divideElementsMediumMargin"
        android:button="@drawable/checkbox_selector"
        android:fontFamily="@font/opens_sans"
        android:text="@string/remember_me1"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:textStyle="bold"
        android:theme="@style/MyCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparentColor"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/divideElementsMediumMargin"
        android:text="@string/forgot_your_password"
        android:textSize="@dimen/mediumTextSize"
        android:fontFamily="@font/opens_sans"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/horizontalMargin"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/divideElementsSmallMargin"
        android:layout_marginEnd="@dimen/horizontalMargin"
        android:background="@drawable/register_button_border"
        android:fontFamily="@font/opens_sans"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/BigTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93"
        app:layout_constraintBottom_toBottomOf="parent"
         />




    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/divideElementsSmallMargin"
        android:fontFamily="@font/opens_sans"
        android:text="@string/don_t_have_account"
        android:textColor="@color/grey"
        android:textSize="@dimen/mediumTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/button_signIn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_signIn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSignInHeight"
        android:background="@color/transparentColor"
        android:fontFamily="@font/opens_sans"
        android:layout_marginStart="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/mediumTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_signIn"
        app:layout_constraintTop_toTopOf="@id/textView_signIn" />
</androidx.constraintlayout.widget.ConstraintLayout>

