<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.main.fragments.profile.ProfileFragment">


    <View
        android:id="@+id/viewTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/themeColor"
        app:layout_constraintBottom_toTopOf="@id/viewBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glCenter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/viewBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="@dimen/buttonSettingsStartMargin"
        android:background="#00FFFFFF"
        android:fontFamily="@font/opens_sans"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="@dimen/SuperBigTextSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/buttonLogOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonLogOut" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogOut"
        android:layout_width="@dimen/buttonLogOutWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/divideElementsMediumMargin"
        android:background="@drawable/logout_button_border"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="@color/greyText2"
        android:textSize="@dimen/mediumTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewUserPhoto"
        android:layout_width="@dimen/userPhotoSize"
        android:layout_height="@dimen/userPhotoSize"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/userPhotoTopMargin"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ava2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/divideElementsBigMargin"
        android:fontFamily="@font/opens_sans"
        android:text="@string/name_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/biggerTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewUserPhoto" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewCareer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/divideElementsSmallMargin"
        android:fontFamily="@font/opens_sans"
        android:text="@string/career"
        android:textColor="@color/greyText2"
        android:textSize="@dimen/mediumTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/divideElementsMediumMargin"
        android:fontFamily="@font/opens_sans"
        android:text="@string/adress"
        android:textColor="@color/greyText2"
        android:textSize="@dimen/mediumTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCareer" />


    <ImageButton
        android:id="@+id/imageButtonFacebook"
        android:layout_width="@dimen/socialNetworkImgSize"
        android:layout_height="@dimen/socialNetworkImgSize"
        android:background="@drawable/ellipse_3"
        android:contentDescription="@string/facebookbutton"
        android:src="@drawable/ic_facebook"
        app:layout_constraintEnd_toEndOf="@id/imageButtonIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewBottom"
        app:layout_constraintBottom_toTopOf="@id/buttonEditProfile"/>

    <ImageButton
        android:id="@+id/imageButtonIn"
        android:layout_width="@dimen/socialNetworkImgSize"
        android:layout_height="@dimen/socialNetworkImgSize"
        android:layout_marginStart="@dimen/socialNetworkStartMargin"
        android:background="@drawable/ellipse_3"
        android:contentDescription="@string/inbutton"
        android:src="@drawable/ic_in"
        app:layout_constraintStart_toEndOf="@id/imageButtonFacebook"
        app:layout_constraintTop_toTopOf="@id/viewBottom"
        app:layout_constraintBottom_toTopOf="@id/buttonEditProfile"/>

    <ImageButton
        android:id="@+id/imageButtonInstagram"
        android:layout_width="@dimen/socialNetworkImgSize"
        android:layout_height="@dimen/socialNetworkImgSize"
        android:layout_marginStart="@dimen/socialNetworkStartMargin"
        android:background="@drawable/ellipse_3"
        android:contentDescription="@string/instagrambutton"
        android:src="@drawable/ic_instagram"
        app:layout_constraintStart_toEndOf="@id/imageButtonIn"
        app:layout_constraintTop_toTopOf="@id/viewBottom"
        app:layout_constraintBottom_toTopOf="@id/buttonEditProfile"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginEnd="@dimen/horizontalMargin"
        android:background="@drawable/button_border"
        android:fontFamily="@font/opens_sans"
        android:paddingTop="@dimen/standardPadding"
        android:paddingBottom="@dimen/standardPadding"
        android:text="@string/edit_profile"
        android:textColor="@color/greyText"
        android:textSize="@dimen/mediumTextSize"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewBottom"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonViewContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/divideElementsMediumMargin"
        android:layout_marginEnd="@dimen/horizontalMargin"
        android:background="@drawable/button_background"
        android:fontFamily="@font/opens_sans"
        android:paddingTop="@dimen/standardPadding"
        android:paddingBottom="@dimen/standardPadding"
        android:text="@string/view_my_contacts"
        android:textColor="@color/white"
        android:textSize="@dimen/BigTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonEditProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>